--- a/.github/workflows/bump-version.yaml
+++ b/.github/workflows/bump-version.yaml
@@ -12,9 +12,12 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/git-semver-next
         id: next_version
+      - uses: ./.github/actions/latest-semantic-version
+        id: latest_version
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
+        if: ${{ steps.next_version.outputs.version != steps.latest_version.outputs.version }}
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_GITHUB }}
         with:
