--- a/examples/angular-example/Dockerfile
+++ b/examples/angular-example/Dockerfile
@@ -8,4 +8,7 @@ RUN npm ci && npm run build:prod
 
 FROM codecentric/single-page-application-server:1-nginx-stable-alpine
 
+# Usually we would mount this file at runtime, but we will add it to the image for demo purposes.
+COPY ./runtime-config.yaml /config/config.yaml
+
 COPY --from=build /src/dist/angular-example/ /app/
