--- a/examples/angular-example/runtime-config.yaml
+++ b/examples/angular-example/runtime-config.yaml
@@ -1,3 +1,6 @@
 default:
   spa_config:
     appTitle: "Prod Title"
+  hardening:
+    content_security_policy:
+      style-src: "'self' 'unsafe-inline'"
