--- a/examples/angular-example/Dockerfile
+++ b/examples/angular-example/Dockerfile
@@ -8,6 +8,8 @@ RUN npm ci && npm run build:prod
 
 FROM codecentric/single-page-application-server:1-nginx-stable-alpine
 
+COPY ./default-config.yaml /config/default.yaml
+
 # Usually we would mount this file at runtime, but we will add it to the image for demo purposes.
 COPY ./runtime-config.yaml /config/config.yaml
 
