--- a/tests/src/test/resources/content_security_policy/config_with_endpoints.yaml
+++ b/tests/src/test/resources/content_security_policy/config_with_endpoints.yaml
@@ -4,4 +4,7 @@ default:
       localApi: "/api"
       httpsApi: "https://example.com/api"
       httpApi: "http://example.com/api"
+      wssApi: "wss://example.com/api"
+      wsApi: "ws://example.com/api"
+      unknownSchemaApi: "unknown://example.com/api"
       apiWithPort: "https://example.com:1234/api"
