fix: Fix crash on startup with long configured server names
Fixes https://github.com/codecentric/single-page-application-server/issues/6

--- a/tests/src/test/resources/spa_config/add_spa_config.yaml
+++ b/tests/src/test/resources/spa_config/add_spa_config.yaml
@@ -6,5 +6,6 @@ secondary_server:
   server_names:
     - "secondary-server.com"
     - "www.secondary-server.com"
+    - "very-long-subdomain-that-should-be-supported-by-default.example.com"
   spa_config:
     testProperty: "Secondary Server Value"
