chore: Add example for using React with Parcel
Closes https://github.com/codecentric/single-page-application-server/issues/4

--- a/examples/react-parcel/Dockerfile
+++ b/examples/react-parcel/Dockerfile
@@ -11,4 +11,4 @@ FROM codecentric/single-page-application-server:1-nginx-stable-alpine
 # Usually we would mount this file at runtime, but we will add it to the image for demo purposes.
 COPY ./runtime-config.yaml /config/config.yaml
 
-COPY --from=build /src/build/ /app/
+COPY --from=build /src/dist/ /app/
