--- a/examples/react-parcel/package.json
+++ b/examples/react-parcel/package.json
@@ -13,15 +13,23 @@
     "@types/react-dom": "^18.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
     "typescript": "^4.9.4",
     "web-vitals": "^3.1.0"
   },
+  "devDependencies": {
+    "parcel": "^2.8.2",
+    "parcel-reporter-static-files-copy": "^1.4.0",
+    "parcel-resolver-ignore": "^2.1.3"
+  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "parcel public/index.html",
+    "build": "parcel build public/index.html"
+  },
+  "parcelIgnore": [
+    "SpaConfig\\.js"
+  ],
+  "staticFiles": {
+    "staticPath": "public/SpaConfig.js"
   },
   "eslintConfig": {
     "extends": [
