--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -39,12 +39,23 @@ jobs:
           git-ref: "${{ github.ref }}"
           nginx-tag: "${{ steps.target_nginx_tag.outputs.tag }}"
           matrix-nginx: "${{ matrix.nginx }}"
-      - uses: docker/build-push-action@v1
-        if: ${{ steps.target_tags.outputs.tags != '' }}
+          docker-repository: "${{ secrets.DOCKER_REPOSITORY }}"
+      - uses: docker/setup-qemu-action@v2
+        name: Set up QEMU
+      - uses: docker/setup-buildx-action@v2
+        name: Set up Docker Buildx
+      - uses: docker/login-action@v2
+        name: Login to Docker Hub
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ${{ secrets.DOCKER_REPOSITORY }}
+      - uses: docker/build-push-action@v4
+        name: Build and push
+        if: ${{ steps.target_tags.outputs.tags != '' }}
+        with:
+          context: .
+          platforms: linux/arm/v7,linux/amd64,linux/arm64
+          push: true
+          pull: true
           tags: ${{ steps.target_tags.outputs.tags }}
-          always_pull: true
-          build_args: NGINX_TAG=${{ steps.target_nginx_tag.outputs.tag }}
+          build-args: NGINX_TAG=${{ steps.target_nginx_tag.outputs.tag }}
