--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -36,9 +36,9 @@ jobs:
           IMAGE_NAME="${{ secrets.DOCKER_REPOSITORY }}:${IMAGE_TAG}"
           echo "::set-output name=image_name::${IMAGE_NAME}"
           echo "IMAGE_NAME=${IMAGE_NAME}"
-          TAGS="${IMAGE_TAG}"
+          TAGS="${{ secrets.DOCKER_REPOSITORY }}:${IMAGE_TAG}"
           if [ "latest" = "${{ matrix.spa_server_major_version }}" ] && [ "stable" = "${{ matrix.nginx }}" ]; then
-            TAGS="${TAGS},latest"
+            TAGS="${TAGS},${{ secrets.DOCKER_REPOSITORY }}:latest"
           fi
           echo "::set-output name=tags::${TAGS}"
           echo "TAGS=${TAGS}"
@@ -70,12 +70,22 @@ jobs:
         if: steps.check_if_update_is_necessary.outputs.needs_update == 'true'
       - run: "make test NGINX_TAG=\"${{ steps.target_nginx_tag.outputs.tag }}\""
         if: steps.check_if_update_is_necessary.outputs.needs_update == 'true'
-      - uses: docker/build-push-action@v1
-        if: ${{ steps.check_if_update_is_necessary.outputs.needs_update == 'true' && steps.target_image_name.outputs.tags != '' }}
+      - uses: docker/setup-qemu-action@v2
+        name: Set up QEMU
+      - uses: docker/setup-buildx-action@v2
+        name: Set up Docker Buildx
+      - uses: docker/login-action@v2
+        name: Login to Docker Hub
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ${{ secrets.DOCKER_REPOSITORY }}
+      - uses: docker/build-push-action@v4
+        name: Build and push
+        if: ${{ steps.check_if_update_is_necessary.outputs.needs_update == 'true' && steps.target_image_name.outputs.tags != '' }}
+        with:
+          context: .
+          platforms: linux/arm/v7,linux/amd64,linux/arm64
+          push: true
+          pull: true
           tags: ${{ steps.target_image_name.outputs.tags }}
-          always_pull: true
-          build_args: NGINX_TAG=${{ steps.target_nginx_tag.outputs.tag }}
+          build-args: NGINX_TAG=${{ steps.target_nginx_tag.outputs.tag }}
