--- a/config/.internal_default.yaml
+++ b/config/.internal_default.yaml
@@ -45,6 +45,10 @@ default:
     # https://cheatsheetseries.owasp.org/cheatsheets/TLS_Cipher_String_Cheat_Sheet.html
     owasp_cipher_string: A
     http2_enabled: true
+  keepalive:
+    server:
+      # Sets a timeout in seconds during which a keep-alive client connection will stay open on the server side.
+      timeout_seconds: 75
   hardening:
     # Disables referrer to prevent information leakage
     referrer_policy: "no-referrer"
