--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,11 +1,12 @@
-name: On Tag pushed
+name: Test and Push Images on new Tag
+
 on:
   push:
     tags:
       - v*
 
 jobs:
-  test:
+  push_images:
     name: Test and Push Images
     runs-on: ubuntu-latest
     strategy:
@@ -13,9 +14,12 @@ jobs:
         # "{0}" will be replaced by the latest pushed nginx version
         nginx: [ "mainline", "stable", "{0}" ]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           ref: ${{ github.ref }}
+          fetch-depth: 0
+          fetch-tags: true
+
       - name: Get latest nginx tag
         id: latest_nginx_tag
         uses: ./.github/actions/latest-docker-repository-version
@@ -39,7 +43,7 @@ jobs:
           git-ref: "${{ github.ref }}"
           nginx-tag: "${{ steps.target_nginx_tag.outputs.tag }}"
           matrix-nginx: "${{ matrix.nginx }}"
-          docker-repository: "${{ secrets.DOCKER_REPOSITORY }}"
+          docker-repository: "${{ vars.DOCKER_REPOSITORY }}"
       - uses: docker/setup-qemu-action@v2
         name: Set up QEMU
       - uses: docker/setup-buildx-action@v2
