--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -1,4 +1,4 @@
-name: Update Docker Images
+name: Update Images
 on:
   push:
     branches:
@@ -17,7 +17,7 @@ jobs:
         # "{0}" will be replaced by the latest pushed nginx version
         nginx: [ "mainline", "stable", "{0}" ]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Get latest nginx tag
         id: latest_nginx_tag
         uses: ./.github/actions/latest-docker-repository-version
@@ -33,12 +33,12 @@ jobs:
         id: target_image_name
         run: |
           IMAGE_TAG="${{ matrix.spa_server_major_version }}-nginx-${{ steps.target_nginx_tag.outputs.tag }}"
-          IMAGE_NAME="${{ secrets.DOCKER_REPOSITORY }}:${IMAGE_TAG}"
+          IMAGE_NAME="${{ vars.DOCKER_REPOSITORY }}:${IMAGE_TAG}"
           echo "::set-output name=image_name::${IMAGE_NAME}"
           echo "IMAGE_NAME=${IMAGE_NAME}"
-          TAGS="${{ secrets.DOCKER_REPOSITORY }}:${IMAGE_TAG}"
+          TAGS="${{ vars.DOCKER_REPOSITORY }}:${IMAGE_TAG}"
           if [ "latest" = "${{ matrix.spa_server_major_version }}" ] && [ "stable" = "${{ matrix.nginx }}" ]; then
-            TAGS="${TAGS},${{ secrets.DOCKER_REPOSITORY }}:${{ matrix.spa_server_major_version }},${{ secrets.DOCKER_REPOSITORY }}:latest"
+            TAGS="${TAGS},${{ vars.DOCKER_REPOSITORY }}:${{ matrix.spa_server_major_version }},${{ vars.DOCKER_REPOSITORY }}:latest"
           fi
           echo "::set-output name=tags::${TAGS}"
           echo "TAGS=${TAGS}"
@@ -58,7 +58,7 @@ jobs:
         run: sudo chmod -R ugo+rwX .
         if: steps.check_if_update_is_necessary.outputs.needs_update == 'true'
       - name: Checkout latest SPA-Server version for major version ${{ matrix.spa_server_major_version }}
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           ref: "v${{ steps.latest_release.outputs.version }}"
         if: steps.check_if_update_is_necessary.outputs.needs_update == 'true'
