--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -44,16 +44,16 @@ jobs:
           nginx-tag: "${{ steps.target_nginx_tag.outputs.tag }}"
           matrix-nginx: "${{ matrix.nginx }}"
           docker-repository: "${{ vars.DOCKER_REPOSITORY }}"
-      - uses: docker/setup-qemu-action@v2
+      - uses: docker/setup-qemu-action@v3
         name: Set up QEMU
-      - uses: docker/setup-buildx-action@v2
+      - uses: docker/setup-buildx-action@v3
         name: Set up Docker Buildx
-      - uses: docker/login-action@v2
+      - uses: docker/login-action@v3
         name: Login to Docker Hub
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - uses: docker/build-push-action@v4
+      - uses: docker/build-push-action@v6
         name: Build and push
         if: ${{ steps.target_tags.outputs.tags != '' }}
         with:
@@ -63,3 +63,5 @@ jobs:
           pull: true
           tags: ${{ steps.target_tags.outputs.tags }}
           build-args: NGINX_TAG=${{ steps.target_nginx_tag.outputs.tag }}
+          provenance: mode=max
+          sbom: true
