--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -53,6 +53,8 @@ pod:
       capabilities:
         drop:
           - ALL
+        add:
+          - NET_BIND_SERVICE
       readOnlyRootFilesystem: true
       runAsNonRoot: true
     livenessProbe:
