--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,7 +16,7 @@ jobs:
         # "{0}" will be replaced by the latest pushed nginx version
         nginx: [ "mainline", "stable", "{0}" ]
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
         with:
           ref: ${{ github.ref }}
           fetch-depth: 0
@@ -34,9 +34,10 @@ jobs:
           echo "::set-output name=tag::${NGINX_TAG}"
           echo "NGINX_TAG=${NGINX_TAG}"
       - run: "./.github/workflows/install-dependencies.sh"
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v5
         with:
-          java-version: '11'
+          distribution: 'zulu'
+          java-version: '21'
       - run: "make test NGINX_TAG=\"${{ steps.target_nginx_tag.outputs.tag }}\""
       - name: Determine tags to push
         id: target_tags
